<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ItemAddActivity"
    android:background="@color/tertiary_background"
    android:orientation="vertical">

    <!-- First Row: Model and Make -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/make_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Make"
            app:placeholderText="Make"
            app:expandedHintEnabled="false"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/make_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/model_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Model"
            app:placeholderText="Model"
            app:expandedHintEnabled="false"
            android:layout_weight="1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/model_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    c
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/serial_number_text"
            style="@style/TextInputLayoutStyle"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:hint="Serial Number (optional)"
            app:expandedHintEnabled="false"
            app:placeholderText="xxxx-xxxx-xxxx">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/serial_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/baseline_document_scanner_24" />


        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <!-- Third Row: Estimated Value and Date of Purchase -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/estimated_value_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Estimated Value"
            app:placeholderText="$0.00"
            app:expandedHintEnabled="false"
            android:layout_weight="1"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/estimated_value_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789." />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/date_of_purchase_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Date Of Purchase"
            app:placeholderText="MM/DD/YYYY"
            android:layout_weight="1"
            app:expandedHintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_of_purchase_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showDatePickerDialog"
                android:focusable="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!-- Fourth Row: Description -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_text"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:hint="Description"
            app:expandedHintEnabled="false"
            app:placeholderText="Description...">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_camera_alt_24"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Fourth Row: Comment -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comment_text"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:hint="Comment"
            app:expandedHintEnabled="false"
            app:placeholderText="Comment...">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comment_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Fifth Row: Tags -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tag_input"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            app:placeholderText="Add multiple tags (comma-separated)"
            android:layout_weight="1"
            android:hint="Tags"
            app:expandedHintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tag_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Upload Image Button (centered)-->
    <Button
        android:id="@+id/upload_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Add Image"
        android:backgroundTint="@color/primary_bronze"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        />




    <!-- Image Carousel (MaskableFrameLayout) -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/carousel_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />



    <!-- Button Options -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        >
        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/delete_color"
            android:text="Delete Item"
            android:textColor="@color/white"
            />
        <View
            android:id="@+id/delete_button_spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:backgroundTint="@color/primary_bronze"
            android:textColor="@color/black"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Item"
            android:backgroundTint="@color/primary_bronze"
            android:textColor="@color/black"
            />
    </LinearLayout>
</LinearLayout>