<resources>
    <string name="app_name">Pocket Inventory</string>
    <string name="subtotal">Total Value: </string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
</resources>